--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         function redirectToThanksPage() {
             // Cambiar la URL a tu subpágina de agradecimiento
-            window.location.href = 'subpagina.html';  // Reemplaza 'subpagina.html' con la URL real de tu subpágina
+            window.location.href = 'gracias.html';  // Reemplaza 'subpagina.html' con la URL real de tu subpágina
         }
     </script>
 </body>
