--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="question">¿Quieres continuar?</div>
+        <div id="question">¿Quieres pasar conmigo el 14 de febrero?</div>
         <button id="yes" class="btn" onclick="showThanks()">Sí</button>
         <button id="no" class="btn" onclick="handleNo()">No</button>
         <div id="thanks-message">¡Gracias!</div>
